# Proj20032026

./: .gitignore  alembic.ini  demo_querty.py  pyproject.toml
app/: crud_test.py  main.py
app-shop/: main.py
app/alembic/: env.py
app/alembic/versions/: 4e9cb60070f2_create_order_table.py  6bb04bc7e8fb_create_posts_table.py  7c4fa3653e5a_add_column_unit_price_to_order_product_.py  83f28854c71d_revised_order_product_assosiation_table.py  91661a8bf7ea_create_profile_table.py  ab2c4f79274e_add_count_column_to_order_product_.py  bd070e7c50e3_create_products_and_users_tables.py  be6924d55bdf_create_order_product_association_talbe.py  fdf6fe35ad87_create_order_table.py
app/alembic/versions/2026/03/: 22_1150_32_81006cf84bf3_create_product_table.py
app/api_v1/: __init__.py
app/api_v1/demo_auth/: create_token.py  demo_auth_jwt.py  demo_auth_views.py  validator.py
app/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
app/auth/: utils.py
app/core/: __init__.py  base.py  config.py  db_helper.py  models_mixins.py  models_orders.py  models_orders_products.py  models_posts.py  models_products.py  models_users.py  models_users_profile.py
app/routers/: items.py  users.py
app/schemas/: schema_itemes.py  schema_users.py
